# icfpc2014

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  configure.flame  place-make.sh  setup-ubuntu12.04.sh
depot/base/: BUILD.cmake  base.cc  macro.cc  macro.h  split.cc  split.h  split_test.cc  stl.h  string-printf.cc  string-printf.h
depot/bcompiler/: BCompiler.java  FixedTreeGenerator.java  SetOpt.java
depot/ghost/: BUILD.cmake  ghost-ai-main.cc  ghost-ai-manager.cc  ghost-ai-manager.h  ghost.cc  ghost.h
depot/ghost/ai/: BUILD.cmake  Makefile  ai.cc  ai.h  chokudai.asm  chokudai.cc  chokudai.ghc  chokudai.h  fichokudai.asm  fichokudai.cc  fichokudai.ghc  fichokudai.h  fickle.asm  fickle.cc  fickle.h  fickle_debug.asm  fickle_debug.cc  fickle_debug.ghc  fickle_debug.h  frightyokudai.asm  frightyokudai.cc  frightyokudai.ghc  frightyokudai.h  generator  ghcpp.rb  ghcpp_chokudai.ghc  ghcpp_chokudai.ghcpp  iwi1.asm  iwi1.cc  iwi1.ghc  iwi1.ghcpp  iwi1.h  iwi2.asm  iwi2.cc  iwi2.ghc  iwi2.ghcpp  iwi2.h  iwi3.asm  iwi3.cc  iwi3.ghc  (+30 more)
depot/ghost/sample/: BUILD.cmake  fickle-main.cc  fickle.cc  fickle.ghc  fickle.h
depot/gtest/: BUILD.cmake  gtest.cc  gtest_main.cc
depot/jssimulator/hack/: game.html
depot/jssimulator/hack/javascripts/: hack.js
depot/jssimulator/original/: game.html
depot/jssimulator/original/javascripts/: game.js
depot/lman/: BUILD.cmake  lambda-man-ai-manager.cc  lambda-man-ai-manager.h  lambda-man.cc  lambda-man.h  lman.cc  lman.h
depot/lman/ai/: BUILD.cmake  ai.cc  ai.h  chokudai-10.cc  chokudai-10.cpp  chokudai-10.h  chokudai-12.cc  chokudai-12.cpp  chokudai-12.h  chokudai-13.cc  chokudai-13.cpp  chokudai-13.h  chokudai-14.cc  chokudai-14.cpp  chokudai-14.h  chokudai-15.cc  chokudai-15.cpp  chokudai-15.h  chokudai-16.cc  chokudai-16.cpp  chokudai-16.h  chokudai-17.cc  chokudai-17.cpp  chokudai-17.h  chokudai-18.cc  chokudai-18.cpp  chokudai-18.h  chokudai-19.cc  chokudai-19.cpp  chokudai-19.h  chokudai-20.cc  chokudai-20.cpp  chokudai-20.h  chokudai-21.cc  chokudai-21.cpp  chokudai-21.h  chokudai-22.cc  chokudai-22.cpp  chokudai-22.h  chokudai-23.cc  (+83 more)
depot/maze/: BUILD.cmake  arena-100.txt  arena-150.txt  arena-20.txt  arena-200.txt  arena-256.txt  arena-32.txt  arena-50.txt  arena-70.txt  gen-aggregatable.sh  gen-test.sh  gen-test2.sh  gen-world-classic.sh  gen.cc  grid-32---1.txt  grid-32---2.txt  grid-32---3.txt  grid-32---4.txt  grid-32---5.txt  grid-32---6.txt  grid-32---7.txt  grid-32---8.txt  grid-32---9.txt  grid2-0.2-15.txt  grid2-0.2-155.txt  grid2-0.2-33---0.txt  grid2-0.2-33---1.txt  grid2-0.2-33---2.txt  grid2-0.2-33---3.txt  grid2-0.2-33---4.txt  grid2-0.2-33---5.txt  grid2-0.2-33---6.txt  grid2-0.2-33---7.txt  grid2-0.2-33---8.txt  grid2-0.2-33---9.txt  grid2-0.2-33.txt  grid2-0.5-111.txt  grid2-0.5-255.txt  grid2-0.5-55.txt  grid2-0.5-77.txt  (+104 more)
depot/sample/: BUILD.cmake  hello-world-main.cc  hello-world.cc  hello-world_test.cc
depot/sbl/: BUILD.cmake  Makefile  array128.cpp  array128.gcc  array128.h  array128_translator.cpp  array16.cpp  array16.gcc  array16.h  array16_translator.cpp  array256.cpp  array256.gcc  array256.h  array256_translator.cpp  array32.cpp  array32.gcc  array32.h  array32_translator.cpp  array64.cpp  array64.gcc  array64.h  array64_translator.cpp  array8.cpp  array8.gcc  array8.h  array8_translator.cpp  fasttree.cpp  list.b  list.cpp  list.h  list_test.cc  queue.b  queue.cpp  queue.h  queue_test.cc  sbl.cc  sbl.h  stack.b  stack.cpp  stack.h  (+5 more)
depot/sbl/array_generator/: array8.cpp  array8.gcc  array8.h  array8_test.cpp  generate.rb  template.cpp  template.h  template_test.cpp  template_translator.cpp
depot/sbl/test/: BUILD.cmake  array128_test.cpp  array16_test.cpp  array256_test.cpp  array32_test.cpp  array64_test.cpp  array8_test.cpp  fasttree_test.cpp  list_test.cpp  queue_test.cpp  stack_test.cpp  tree_test.cpp
depot/sim/: 256.txt  BUILD.cmake  character.cc  character.h  game-interface.cc  game-interface.h  ghost-interface.cc  ghost-interface.h  lambda-man-interface.cc  lambda-man-interface.h  maze_example.txt  sim.cc  sim.h  sim_main.cc  sim_test.cc
depot/submit/unagi_final1/solution/: lambdaman.gcc
depot/submit/unagi_final2/solution/: ghost0.ghc  lambdaman.gcc
depot/submit/unagi_final3/solution/: lambdaman.gcc
depot/submit/unagi_final4/solution/: lambdaman.gcc
depot/test/: simulator_test
depot/test/simulator/: chokudai-10;chokudai;world-classic.txt  migi;chokudai;world-classic.txt  migi;fickle;world-classic.txt  migi;fickle_debug;world-classic.txt
depot/tranlator/: BUILD.cmake  lib.cpp  list.b  rounding.cpp
depot/tranlator/ai/: rounding.cc
depot/translator/: BUILD.cmake  Makefile  lib.cc  lib.h  list.b  main.cc  main_run.cc  rounding.cpp  tosdebug.cc
depot/translator/ai/: BUILD.cmake  Makefile  chokudai-ai-ver4.cc  chokudai-ai-ver8.cc  list.b  list.cc  rounding.cc  tree.b  tree.cc
depot/util/: BUILD.cmake  colors.h  coordinate.cc  coordinate.h  flags.cc  flags.h
